--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://chrisaslan.com/chris-aslan",
+  "homepage": "https://chrisaslan.com",
   "name": "chris-aslan",
   "version": "0.1.0",
   "private": true,
